# GPGPU_Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_image.sh
images/output/: video.avi
includes/: blur_gpu.hpp  detect_obj.hpp  detect_obj_gpu.hpp  difference_gpu.hpp  grayscale_gpu.hpp  helpers_gpu.hpp  threshold.hpp  threshold_gpu.hpp  utils_gpu.hpp
src/: CMakeLists.txt  bench.cpp  blur.cpp  blur.hpp  blur_cpu.cpp  detect.cu  detect.hpp  detect_obj.hpp  detect_obj_cpu.cpp  detect_obj_gpu.cu  grayscale_gpu.hpp  helpers_images.cpp  helpers_images.hpp  main_cpu.cpp  main_gpu.cpp  mandel.cpp  opening.cpp  opening_cpu.cpp  opening_gpu.cu  opening_gpu.hpp  opening_old.cpp  struct_utils.cpp  threshold_cpu.cpp  utils.hpp
src/bench/: bench_cpu.cpp  bench_gpu.cpp
src/cpu/: CMakeLists.txt  bbox.cpp  blur_cpu.cpp  detect_obj_cpu.cpp  main_cpu.cpp
src/cpu/threshold/: connexe_components_cpu.cpp  otsu_cpu.cpp  threshold_cpu.cpp
src/gpu/: CMakeLists.txt  bbox_gpu.cu  blurr_gpu.cu  detect_obj_gpu.cu  difference_gpu.cu  gray_scale_gpu.cu  helpers_gpu.cu  main_gpu.cpp  opening_closing_gpu.cu  utils_gpu.cu
src/gpu/threshold/: connexe_components_gpu.cu  gpu_functions.cu  main_gpu_test.cpp  otsu_gpu.cu  threshold_gpu.cu
src/test_gpu/: gpu_functions.cu  gpu_functions.hpp  main_gpu_test.cpp  otsu_gpu.cu  threshold_gpu.cu
src/threshold/: connexe_components_cpu.cpp  otsu_cpu.cpp  threshold_cpu.cpp
visu/: entry_example.txt  visu.py
